fix cursor on safari

--- a/src/ui/styles/index.css
+++ b/src/ui/styles/index.css
@@ -28,7 +28,7 @@ code {
   display: inline-block;
 }
 
-button:not(:disabled) {
+button:not(:disabled), a[href] {
   cursor: pointer;
 }
 
